docs: agregar LICENSE (GPL v3), THIRD_PARTY_LICENSES y README completo
- LICENSE: GNU GPL v3, Copyright (C) 2024 Emilio Medina
- THIRD_PARTY_LICENSES.md: avisos de copyright para 10 dependencias
  (iec61850bean, pcap4j, JNA, FlatLaf, SLF4J, asn1bean, jasn1,
   ANTLR, libiec61850, Npcap)
- README.md: reescrito con requisitos previos (Npcap, libiec61850.dll),
  instrucciones de instalacion, uso rapido y tabla de dependencias

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>